<?xml version="1.0"?>
<package format="2">
  <name>trajectory_generator</name>
  <version>0.0.1</version>
  <description>The trajectory_generator package</description>
  <maintainer email="parthasarathy@10xconstruction.ai">Parthasarathy Bana</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_visual_tools</depend>
</package>