<?xml version="1.0"?>
<package format="2">
  <name>trajectory_generator</name>
  <version>0.0.1</version>
  <description>The trajectory_generator package</description>
  <maintainer email="parthasarathy@10xconstruction.ai">Parthasarathy Bana</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <export>                               
   <build_type>ament_cmake</build_type> 
  </export> 
</package>